# notes

./: .gitignore  FEATURES.md  IMPLEMENTATION_COMPLETE.md  Makefile  PRE_PUSH_CHECKLIST.md  SYNC_FIX.md  docker-compose.yml
desktop/: index.html  menu-bar-note.html  package-lock.json  package.json  quick-note.html  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/src/: App.tsx  animations.css  main.tsx  menu-bar-note.tsx  quick-note.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  menu-bar-note.json  quick-note.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: error.rs  lib.rs
desktop/src-tauri/src/commands/: folders.rs  mod.rs  notes.rs  scratch_pad.rs  sync.rs  tasks.rs  trash.rs
desktop/src-tauri/src/db/: mod.rs
desktop/src-tauri/src/models/: folder.rs  mod.rs  note.rs  task.rs
mobile/: App.tsx  app.json  eas.json  editor.html  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
notes-swift/: Package.resolved  Package.swift
server/: .dockerignore  .env  .env.example  Dockerfile  README.md  go.mod  go.sum  index.ts  package.json  tsconfig.json
server/db/: index.ts
server/drizzle/: 0000_unusual_orphan.sql  0001_add_folders_deleted_at.sql  0001_good_silver_fox.sql
server/middleware/: auth.ts
server/routes/: auth.ts  health.ts  index.ts  sync.ts
server/services/: auth.ts  sync.ts
server/types/: auth.ts  folders.ts  index.ts  notes.ts  sync.ts  tasks.ts
shared/: package.json
shared/types/: api.ts  (+6 more)
(+871 files in other folders)
